// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<CurrentPhase /> render: section role - action 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading player"
  >
    <h2>
      action
    </h2>
  </div>
  <div
    class="content"
  >
    <article
      aria-disabled="true"
      aria-label="card player_move_1"
      aria-pressed="false"
      class="card active actionCard"
    >
      <div
        class="heading"
      >
        <div
          class="icon"
        />
        <div
          class="title title"
        >
          move
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="text paragraph"
        >
          <p>
            Move up to two different Units
          </p>
        </div>
        <div
          class="waterMark"
        />
      </div>
    </article>
    <button
      class="button disabled"
    >
      SKIP
    </button>
  </div>
</section>
`;

exports[`<CurrentPhase /> render: section role - planification 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading player"
  >
    <h2>
      planification
    </h2>
  </div>
  <div
    class="content"
  >
    <div
      aria-disabled="true"
      class="card silhouette"
    >
      <div
        class="title title"
      >
        next
      </div>
      <div
        class="text"
      >
        Drag here the card you wish to use next round
      </div>
    </div>
    <div
      aria-disabled="true"
      class="card silhouette"
    >
      <div
        class="title title"
      >
        future
      </div>
      <div
        class="text"
      >
        Drag here the card you wish to use in two rounds
      </div>
    </div>
    <button
      class="button disabled player"
    >
      GO
    </button>
  </div>
</section>
`;

exports[`<CurrentPhase /> render: section role - planification with cards 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading player"
  >
    <h2>
      planification
    </h2>
  </div>
  <div
    class="content"
  >
    <article
      aria-disabled="false"
      aria-label="card player_move_2"
      aria-pressed="false"
      class="card available actionCard"
    >
      <div
        class="heading"
      >
        <div
          class="icon"
        />
        <div
          class="title title"
        >
          move
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="text paragraph"
        >
          <p>
            Move up to two different Units
          </p>
        </div>
        <div
          class="waterMark"
        />
      </div>
    </article>
    <article
      aria-disabled="false"
      aria-label="card player_recruit_1"
      aria-pressed="false"
      class="card available actionCard"
    >
      <div
        class="heading"
      >
        <div
          class="icon"
        />
        <div
          class="title title"
        >
          recruit
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="text paragraph"
        >
          <p>
            Recruit units at up to two different Settlements
          </p>
        </div>
        <div
          class="waterMark"
        />
      </div>
    </article>
    <button
      class="button player"
    >
      GO
    </button>
  </div>
</section>
`;
